--- a/packaging/hudi-timeline-server-bundle/pom.xml
+++ b/packaging/hudi-timeline-server-bundle/pom.xml
@@ -86,7 +86,7 @@
 
         <!-- Hadoop -->
         <dependency>
-            <groupId>org.apache.hadoop</groupId>
+            <groupId>${hadoop.groupid}</groupId>
             <artifactId>hadoop-hdfs</artifactId>
             <!-- Need these exclusions to make sure JavaSparkContext can be setup. https://issues.apache.org/jira/browse/SPARK-1693 -->
             <exclusions>
@@ -105,7 +105,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.apache.hadoop</groupId>
+            <groupId>${hadoop.groupid}</groupId>
             <artifactId>hadoop-common</artifactId>
             <exclusions>
                 <exclusion>
@@ -123,7 +123,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.apache.hadoop</groupId>
+            <groupId>${hadoop.groupid}</groupId>
             <artifactId>hadoop-client</artifactId>
             <exclusions>
                 <exclusion>
@@ -206,6 +206,14 @@
                       <include>log4j:log4j</include>
                   </includes>
                 </artifactSet>
+                <relocations>
+
+                    <relocation>
+                        <pattern>org.eclipse.jetty.</pattern>
+                        <shadedPattern>org.apache.hudi.org.apache.jetty.</shadedPattern>
+                    </relocation>
+                </relocations>
+
             </configuration>
             <executions>
                 <execution>
