--- a/hudi-utilities/pom.xml
+++ b/hudi-utilities/pom.xml
@@ -106,6 +106,16 @@
       <groupId>org.apache.hudi</groupId>
       <artifactId>hudi-common</artifactId>
       <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.hops</groupId>
+          <artifactId>hops-leader-election</artifactId>
+    	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hudi</groupId>
@@ -116,6 +126,10 @@
           <groupId>javax.servlet</groupId>
           <artifactId>servlet-api</artifactId>
         </exclusion>
+        <exclusion>
+	  <groupId>io.hops</groupId>
+	  <artifactId>hops-leader-election</artifactId>
+	</exclusion>	
       </exclusions>
     </dependency>
     <dependency>
@@ -283,31 +297,51 @@
 
     <!-- Hadoop -->
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
+      <groupId>${hadoop.groupid}</groupId>
+      <artifactId>hadoop-client</artifactId> 
+      <exclusions>
+	<exclusion>
+	  <groupId>io.hops</groupId>
+	  <artifactId>hops-leader-election</artifactId>
+	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
+      <groupId>${hadoop.groupid}</groupId>
       <artifactId>hadoop-mapreduce-client-common</artifactId>
       <exclusions>
         <exclusion>
           <groupId>javax.servlet</groupId>
           <artifactId>servlet-api</artifactId>
         </exclusion>
+	<exclusion>
+	  <groupId>io.hops.hive</groupId>
+	  <artifactId>hive-llap-tez</artifactId>
+	</exclusion>	
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
+      <groupId>${hadoop.groupid}</groupId>
       <artifactId>hadoop-hdfs</artifactId>
       <classifier>tests</classifier>
       <scope>test</scope>
+      <exclusions>
+	<exclusion>
+	  <groupId>io.hops</groupId>
+	  <artifactId>hops-leader-election</artifactId>
+	</exclusion>	
+      </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
+      <groupId>${hadoop.groupid}</groupId>
       <artifactId>hadoop-common</artifactId>
       <classifier>tests</classifier>
       <scope>test</scope>
       <exclusions>
+	<exclusion>
+	  <groupId>io.hops</groupId>
+	  <artifactId>hops-leader-election</artifactId>
+	</exclusion>	
         <exclusion>
           <groupId>org.mortbay.jetty</groupId>
           <artifactId>*</artifactId>
@@ -347,6 +381,12 @@
       <groupId>${hive.groupid}</groupId>
       <artifactId>hive-service</artifactId>
       <version>${hive.version}</version>
+      <exclusions>
+        <exclusion>
+	  <groupId>io.hops</groupId>
+	  <artifactId>hops-leader-election</artifactId>
+	</exclusion>	
+      </exclusions>      
     </dependency>
 
     <!-- Hoodie - Test -->
@@ -365,6 +405,12 @@
       <classifier>tests</classifier>
       <type>test-jar</type>
       <scope>test</scope>
+      <exclusions>      
+        <exclusion>
+	  <groupId>io.hops</groupId>
+	  <artifactId>hops-leader-election</artifactId>
+	</exclusion>
+      </exclusions>      
     </dependency>
     <dependency>
       <groupId>org.apache.hudi</groupId>
@@ -373,6 +419,12 @@
       <classifier>tests</classifier>
       <type>test-jar</type>
       <scope>test</scope>
+      <exclusions>      
+        <exclusion>
+          <groupId>io.hops</groupId>
+          <artifactId>hops-leader-election</artifactId>
+    	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hudi</groupId>
@@ -381,6 +433,12 @@
       <classifier>tests</classifier>
       <type>test-jar</type>
       <scope>test</scope>
+      <exclusions>      
+        <exclusion>
+	  <groupId>io.hops</groupId>
+	  <artifactId>hops-leader-election</artifactId>
+	</exclusion>	
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hudi</groupId>
@@ -389,6 +447,12 @@
       <classifier>tests</classifier>
       <type>test-jar</type>
       <scope>test</scope>
+      <exclusions>      
+        <exclusion>
+	  <groupId>io.hops</groupId>
+	  <artifactId>hops-leader-election</artifactId>
+	</exclusion>	
+      </exclusions>            
     </dependency>
 
     <!-- Hive - Test -->
