--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <groupId>org.apache.hudi</groupId>
   <artifactId>hudi</artifactId>
   <packaging>pom</packaging>
-  <version>0.5.1-SNAPSHOT</version>
+  <version>0.5.1.1-SNAPSHOT</version>
   <description>Apache Hudi (incubating) brings stream style processing on big data</description>
   <url>https://github.com/apache/incubator-hudi</url>
   <name>Hudi</name>
@@ -81,9 +81,9 @@
     <slf4j.version>1.7.5</slf4j.version>
     <joda.version>2.9.9</joda.version>
     <hadoop.groupid>io.hops</hadoop.groupid>
-    <hadoop.version>2.8.2.8</hadoop.version>
+    <hadoop.version>3.2.0.0-SNAPSHOT</hadoop.version>
     <hive.groupid>io.hops.hive</hive.groupid>
-    <hive.version>3.0.0.1</hive.version>
+    <hive.version>3.0.0.4</hive.version>
     <metrics.version>4.0.2</metrics.version>
     <spark.version>2.1.0</spark.version>
     <avro.version>1.7.7</avro.version>
@@ -830,7 +830,7 @@
     <repository>
       <id>Hops</id>
       <name>Hops Repo</name>
-      <url>https://bbc1.sics.se/archiva/repository/Hops/</url>
+      <url>https://archiva.hops.works/repository/Hops/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
